fix logo and text size on mobile

--- a/docs/.vuepress/theme/styles/theme.scss
+++ b/docs/.vuepress/theme/styles/theme.scss
@@ -49,6 +49,7 @@ h4 {
     a {
       display: inline-flex;
       align-items: center;
+      height: 100%;
     }
   }
 
@@ -100,13 +101,13 @@ h4 {
     }
 
     .site-name {
-      font-size: 2.5rem;
-      margin-top: 0px;
+      font-size: 1.8rem;
+      margin-top: -2px;
     }
 
     .logo {
-      width: 45px;
-      padding-top: 5px;
+      width: 35px;
+      padding-top: 0px;
     }
   }
 }
@@ -190,7 +191,7 @@ h4 {
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 6px;
-  height: 3px;
+  height: 5px;
   background-color: var(--scrollbar-bg-color);
 }
 
